--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="covid-19 estimator" />
+    <meta name="keywords" content="covid-19 Estimator" />
+    <meta name="author" content="Obinna Asiegbu" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learn, Build and Earn</title>
+    <title>Covid 19 Infection Estimator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
