--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
               people coming together, closing buildings and canceling events.
             </p>
           </div>
-          <button class="cta">Learn More</button>
+          <button class="cta">Infection Estimator</button>
         </div>
         <div class="hero-right-col">
           <img src="images/social_distancing.png" alt="" />
