--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="feature-btn">
-          <button class="cta">Join us</button>
+          <button class="cta">Learn More</button>
         </div>
       </section>
 
