--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Obinna Asiegbu" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Covid 19 Infection Estimator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
