--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Obinna Asiegbu" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Covid 19 Infection Estimator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
@@ -36,7 +36,7 @@
               people coming together, closing buildings and canceling events.
             </p>
           </div>
-          <button class="cta">Learn More</button>
+          <button class="cta">Get Estimator</button>
         </div>
         <div class="hero-right-col">
           <img src="images/social_distancing.png" alt="" />
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="feature-btn">
-          <button class="cta">Join us</button>
+          <button class="cta">Learn More</button>
         </div>
       </section>
 
