--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,7 @@
           <div class="header-text">
             <h1>Slowing down the spread of highly contagious diseases</h1>
             <p>
-              Employing social distancing measures by limiting large groups of
-              people coming together, closing buildings and canceling events.
+              Helping society and leaders prepare for the real big problem             
             </p>
           </div>
           <button class="cta">Get Estimator</button>
