--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
           <div class="header-text">
             <h1>Slowing down the spread of highly contagious diseases</h1>
             <p>
-              Helping society and leaders prepare for the real big problem             
+              Helping society and leaders prepare for the real big problem
+              through a simple infection estimator
             </p>
           </div>
           <button class="cta">Get Estimator</button>
