--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@
               placeholder="Duration"
             />
 
-            <button data-estimate="" class="button">
+            <button onclick="covid19ImpactEstimator();" class="button">
               Get estimate
             </button>
           </div>
         </form>
       </div>
+      <script src="estimator.js"></script>
     
 </body>
 </html>
